# CatLauncher

./: README.md  latest.json
cat-launcher/: package.json  pnpm-lock.yaml
cat-launcher/src/: routes.tsx
cat-launcher/src-tauri/: Cargo.toml  tauri.conf.json
cat-launcher/src-tauri/content/: mods.json
cat-launcher/src-tauri/schemas/: schema.sql
cat-launcher/src-tauri/src/: lib.rs
cat-launcher/src-tauri/src/infra/repository/: db_helper.rs  mod.rs
cat-launcher/src-tauri/src/master_reset/: commands.rs  mod.rs  reset.rs
cat-launcher/src-tauri/src/mods/repository/: installed_mods_repository.rs  sqlite_installed_mods_repository.rs
cat-launcher/src-tauri/src/settings/: colors.rs  commands.rs  mod.rs  settings.rs  types.rs  update_color_files.rs  update_settings.rs
cat-launcher/src-tauri/src/settings/repository/: sqlite_settings_repository.rs
cat-launcher/src-tauri/src/soundpacks/repository/: installed_soundpacks_repository.rs  sqlite_installed_soundpacks_repository.rs
cat-launcher/src-tauri/src/tilesets/repository/: installed_tilesets_repository.rs  sqlite_installed_tilesets_repository.rs
cat-launcher/src-tauri/src/variants/: game_variant.rs  get_game_variants_info.rs  mod.rs
cat-launcher/src/components/: DropdownButton.tsx
cat-launcher/src/components/ui/: dropdown-menu.tsx
cat-launcher/src/lib/: commands.ts  constants.ts  queryKeys.ts
cat-launcher/src/pages/AchievementsPage/: index.tsx
cat-launcher/src/pages/AchievementsPage/components/: PlayTimeChart.tsx
cat-launcher/src/pages/AchievementsPage/hooks/: usePlayTimeData.ts
cat-launcher/src/pages/ModsPage/: ModsList.tsx
cat-launcher/src/pages/PlayPage/: GameVariantCard.tsx  InteractionButton.tsx
cat-launcher/src/pages/PlayPage/hooks/: index.ts  useUpgradeInfo.ts
cat-launcher/src/pages/SettingsPage/: index.tsx
cat-launcher/src/pages/SettingsPage/components/: ColorSettings.tsx  (+2 more)
(+4 files in other folders)
